  into one article and publish it dayly/weekly/whatever
* "check tweetback" link should add new tweetbacks immediately
* Link twitter accs with s9y accs. Only s9y autors linked to a
  twitter acc should be able to create tweets with that acc.
* Twitter announcements/credentials etc. per author instead of
  only per central blog

1.62
--------------------------
    * Fixed a markup bug for twitter timeline (yellowled)

1.61
--------------------------
    * Adapted backend markup (tweeter_client.inc.php) for 2.0 backend (yellowled)
    * Fixed a typo in the English lang file (yellowled)
    * Added int-casting to str_repeat() to prevent PHP notice
    * Added additional backend markup (backend_display) for 2.0 backend (yellowled)
    * Moved backend menu item to proper backend nav section (yellowled)

1.60
--------------------------

    * Adapted http://twitter.com to https://twitter.com due to Twitter
      enforcing SSL now (well, they could have done a redirect to be nice
      to people, but...)

1.51 (mattsches)
--------------------------
    * Switched tweetback search to API 1.1

1.50
-----
    * Added empty $entries, $validated_entries, $highest_ids checks to avoid foreach errors
    * Some extended whitespace, tabs and other minors cleanup

1.49
-----
    * Bump version to propagate new .htaccess in Spartacus sync and mirrors

1.48
-----
    * Static PHP5 fixes

1.47 (brockhaus)
--------------------------
    * Added API token functionality for announcing articles via pirat.ly.

1.46 (brockhaus)
--------------------------
    * Check tweetbacks (search) converted to API 1.1 (optional). You need to choose an OAuth acc handling the search.
    * Already implemented OAuth function will call API 1.1 instead of API 1.0 now.
    * Sitebar plugin, PHP version, optional uses Twitter API 1.1 with OAuth now.
    * Tweeter hides URL shortener functionality now if URL shortener is set to "uncompressed".
    * Added new URL shortener: pirat.ly.

1.43 (brockhaus)